[package]
name = "miden-processor"
version = "0.15.0"
description = "Miden VM processor"
documentation = "https://docs.rs/miden-processor/0.15.0"
readme = "README.md"
categories = ["emulators", "no-std"]
keywords = ["miden", "virtual-machine"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
concurrent = ["std", "winter-prover/concurrent"]
default = ["std"]
std = ["vm-core/std", "winter-prover/std", "thiserror/std"]
testing = ["miden-air/testing"]
# Removes proper error context from the error messages. Enable in production builds that need
# maximal performance. 
no_err_ctx = []
# Like `testing`, but slows down the processor speed to make it easier to debug.
bus-debugger = ["testing", "miden-air/testing"]

[dependencies]
miden-air = { package = "miden-air", path = "../air", version = "0.15", default-features = false }
miette = { package = "miden-miette", version = "8.0", default-features = false, features = [
    "fancy-no-syscall",
    "derive"
] }
tokio = { version = "1.45", default-features = false, features = ["rt", "sync"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
vm-core = { package = "miden-core", path = "../core", version = "0.15", default-features = false, features = ["diagnostics"] }
winter-prover = { package = "winter-prover", version = "0.13", default-features = false }
thiserror = { workspace = true }

[dev-dependencies]
assembly = { package = "miden-assembly", path = "../assembly", version = "0.15", default-features = false }
logtest = { version = "2.0", default-features = false }
pretty_assertions = "1.4"
rstest = { version = "0.25" }
test-utils = { package = "miden-test-utils", path = "../test-utils" }
winter-fri = { package = "winter-fri", version = "0.13" }
winter-utils = { package = "winter-utils", version = "0.13" }
