[package]
name = "miden-prover"
version = "0.10.5"
description = "Miden VM prover"
documentation = "https://docs.rs/miden-prover/0.10.5"
readme = "README.md"
categories = ["cryptography", "emulators", "no-std"]
keywords = ["miden", "prover", "stark", "zkp"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
concurrent = ["processor/concurrent", "std", "winter-prover/concurrent"]
default = ["std"]
metal = ["dep:miden-gpu", "dep:pollster", "concurrent", "std"]
webgpu = ["dep:miden-gpu", "miden-gpu/webgpu", "async"]
async = ["maybe-async/async", "winter-prover/async", "dep:async-trait"]
std = ["air/std", "processor/std", "winter-prover/std", "miden-gpu/std", "tracing/std"]

[dependencies]
air = { package = "miden-air", path = "../air", version = "0.10", default-features = false }
processor = { package = "miden-processor", path = "../processor", version = "0.10", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
winter-prover = { package = "winter-prover", version = "0.9", default-features = false }
maybe-async = { package = "winter-maybe-async", version = "0.9", default-features = false }
async-trait = { version = "0.1", optional = true }
elsa = { version = "1.9" }

[target.'cfg(all(target_arch = "aarch64", target_os = "macos"))'.dependencies]
miden-gpu = { git = "https://github.com/0xPolygonMiden/miden-gpu", rev = "389dd1ed47b9b345e978611421afa2eab722e9c4", default-features = false, optional = true }
pollster = { version = "0.3", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
miden-gpu = { git = "https://github.com/0xPolygonMiden/miden-gpu", rev = "389dd1ed47b9b345e978611421afa2eab722e9c4", default-features = false, optional = true }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
wee_alloc = "0.4"
console_error_panic_hook = "0.1"
