[package]
name = "miden-stdlib"
version = "0.11.0"
description = "Miden VM standard library"
documentation = "https://docs.rs/miden-stdlib/0.11.0"
readme = "README.md"
categories = ["cryptography", "mathematics"]
keywords = ["miden", "program", "stdlib"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[[bench]]
name = "compilation"
harness = false

[[test]]
name = "stdlib"
path = "tests/main.rs"

[features]
default = ["std"]
std = ["assembly/std"]
with-debug-info = []

[dependencies]
assembly = { package = "miden-assembly", path = "../assembly", version = "0.11", default-features = false }
vm-core = { package = "miden-core", path = "../core", version = "0.11", default-features = false }

[dev-dependencies]
blake3 = "1.5"
criterion = "0.5"
miden-air = { package = "miden-air", path = "../air", version = "0.11", default-features = false }
num = "0.4"
num-bigint = "0.4"
pretty_assertions = "1.4"
processor = { package = "miden-processor", path = "../processor", version = "0.11", default-features = false, features = [
    "testing",
] }
rand = { version = "0.8", default-features = false }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
test-utils = { package = "miden-test-utils", path = "../test-utils" }
winter-air = { package = "winter-air", version = "0.11" }
winter-fri = { package = "winter-fri", version = "0.11" }


[build-dependencies]
assembly = { package = "miden-assembly", path = "../assembly", version = "0.11" }
