[package]
name = "miden-test-utils"
version = "0.1.0"
description = "Test utilities for Miden VM programs"
readme = "README.md"
categories = ["development-tools::testing", "no-std"]
keywords = ["miden", "test", "virtual-machine"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = [
    "assembly/std",
    "processor/std",
    "prover/std",
    "verifier/std",
    "vm-core/std",
    "winter-prover/std",
]

[dependencies]
air = { package = "miden-air", path = "../air", version = "0.10", default-features = false }
assembly = { package = "miden-assembly", path = "../assembly", version = "0.10", default-features = false, features = [
    "testing",
] }
processor = { package = "miden-processor", path = "../processor", version = "0.10", default-features = false, features = [
    "testing",
] }
prover = { package = "miden-prover", path = "../prover", version = "0.10", default-features = false }
stdlib = { package = "miden-stdlib", path = "../stdlib", version = "0.10", default-features = false }
test-case = "3.2"
verifier = { package = "miden-verifier", path = "../verifier", version = "0.10", default-features = false }
vm-core = { package = "miden-core", path = "../core", version = "0.10", default-features = false }
winter-prover = { package = "winter-prover", version = "0.9", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
pretty_assertions = { version = "1.4", default-features = false, features = [
    "alloc",
] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
pretty_assertions = "1.4"
proptest = "1.4"
rand-utils = { package = "winter-rand-utils", version = "0.9" }
