[package]
name = "miden-vm-tools"
version = "0.1.0"
description = "Tools for working with Miden VM"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/maticnetwork/miden"
edition = "2021"
rust-version = "1.60"

[dependencies]
miden = { path = "../miden", version = "0.2", default-features = false }
structopt = { version = "0.3", default-features = false }

[[bin]]
name = "mvt"
path = "src/main.rs"
bench = false
doctest = false