[package]
name = "miden-verifier"
version = "0.9.1"
description="Miden VM execution verifier"
authors = ["miden contributors"]
readme="README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-vm"
documentation = "https://docs.rs/miden-verifier/0.9.1"
categories = ["cryptography", "no-std"]
keywords = ["miden", "stark", "verifier", "zkp"]
edition = "2021"
rust-version = "1.75"

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = ["air/std", "vm-core/std", "winter-verifier/std"]

[dependencies]
air = { package = "miden-air", path = "../air", version = "0.9", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
vm-core = { package = "miden-core", path = "../core", version = "0.9", default-features = false }
winter-verifier = { package = "winter-verifier", version = "0.9", default-features = false }
