[package]
name = "miden-verifier"
version = "0.10.5"
description="Miden VM execution verifier"
documentation = "https://docs.rs/miden-verifier/0.10.5"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["miden", "stark", "verifier", "zkp"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = ["air/std", "vm-core/std", "winter-verifier/std"]

[dependencies]
air = { package = "miden-air", path = "../air", version = "0.10", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
vm-core = { package = "miden-core", path = "../core", version = "0.10", default-features = false }
winter-verifier = { package = "winter-verifier", git = "https://github.com/facebook/winterfell", branch = "next", default-features = false }
